# transcribe

./: .gitignore  Makefile  README.md  pyproject.toml  run.sh  transcribe.py  transcribe.sh
config/: fixes.csv  glossary.csv
docker/: Dockerfile  build.sh  run.sh
