[project]
name = "whisper-transcribe"
version = "0.1.0"
description = "transcribe video file or http link"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["mypy>=1.13.0"]

[project.scripts]
transcribe = "transcribe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["transcribe.py", "bin/*", "config"]
